Removing endpoints (#510)
* Removing endpoints

* Update Swagger

---------
