# internal/controllers/user_devices_controller.go
@@ -542,73 +542,6 @@ func (udc *UserDevicesController) GetUserDevices(c *fiber.Ctx) error {
 	return c.JSON(MyDevicesResp{UserDevices: apiMyDevices})
 }
 
-// GetSharedDevices godoc
-// @Description gets all devices shared with current user - pulled from token
-// @Tags        user-devices
-// @Produce     json
-// @Success     200 {object} controllers.MyDevicesResp
-// @Security    BearerAuth
-// @Router      /user/devices/shared [get]
-func (udc *UserDevicesController) GetSharedDevices(c *fiber.Ctx) error {
-	// todo grpc call out to grpc service endpoint in the deviceDefinitionsService udc.deviceDefSvc.GetDeviceDefinitionsByIDs(c.Context(), []string{ "todo"} )
-
-	userAddr, err := helpers.GetJWTEthAddr(c)
-	if err != nil {
-		return err
-	}
-
-	var sharedVehicles []*models.UserDevice
-
-	// This is N+1 hell.
-	privs, err := models.NFTPrivileges(
-		models.NFTPrivilegeWhere.ContractAddress.EQ(common.FromHex(udc.Settings.VehicleNFTAddress)),
-		models.NFTPrivilegeWhere.UserAddress.EQ(userAddr.Bytes()),
-		models.NFTPrivilegeWhere.Expiry.GT(time.Now()),
-		qm.OrderBy(models.NFTPrivilegeColumns.UpdatedAt+" DESC, "+models.NFTPrivilegeColumns.TokenID+" DESC"),
-	).All(c.Context(), udc.DBS().Reader)
-	if err != nil {
-		return err
-	}
-
-	var processedIDs []types.Decimal
-
-PrivLoop:
-	for _, priv := range privs {
-		for _, tok := range processedIDs {
-			if tok.Cmp(priv.TokenID.Big) == 0 {
-				continue PrivLoop
-			}
-		}
-
-		processedIDs = append(processedIDs, priv.TokenID)
-
-		ud, err := models.UserDevices(
-			models.UserDeviceWhere.TokenID.EQ(types.NewNullDecimal(priv.TokenID.Big)),
-			qm.Load(models.UserDeviceRels.UserDeviceAPIIntegrations),
-			qm.Load(models.UserDeviceRels.MintRequest),
-			qm.Load(models.UserDeviceRels.BurnRequest),
-			qm.Load(qm.Rels(models.UserDeviceRels.VehicleTokenSyntheticDevice, models.SyntheticDeviceRels.MintRequest)),
-			qm.Load(qm.Rels(models.UserDeviceRels.VehicleTokenSyntheticDevice, models.SyntheticDeviceRels.BurnRequest)),
-		).One(c.Context(), udc.DBS().Reader)
-		if err != nil {
-			if err == sql.ErrNoRows {
-				udc.log.Warn().Msgf("User %s has privileges on a vehicle %d of which we have no record.", userAddr, priv.TokenID)
-				continue
-			}
-			return err
-		}
-
-		sharedVehicles = append(sharedVehicles, ud)
-	}
-
-	apiSharedDevices, err := udc.dbDevicesToDisplay(c.Context(), sharedVehicles)
-	if err != nil {
-		return err
-	}
-
-	return c.JSON(MyDevicesResp{SharedDevices: apiSharedDevices})
-}
-
 func NewUserDeviceIntegrationStatusesFromDatabase(udis []*models.UserDeviceAPIIntegration, integrations []*ddgrpc.Integration, sdStat *SyntheticDeviceStatus) []UserDeviceIntegrationStatus {
 	out := make([]UserDeviceIntegrationStatus, len(udis))
 
@@ -1410,80 +1343,6 @@ func attrListsToAttrPairs(attrs []string, infos []string) []contracts.AttributeI
 		}
 	}
 	return out
-}
-
-// UpdateNFTImage godoc
-// @Description Updates a user's NFT image.
-// @Tags        user-devices
-// @Param       userDeviceId path string                   true "user device id"
-// @Param       nftIamges body controllers.NFTImageData true "base64-encoded NFT image data"
-// @Success     204
-// @Security    BearerAuth
-// @Router      /user/devices/{userDeviceId}/commands/update-nft-image [post]
-func (udc *UserDevicesController) UpdateNFTImage(c *fiber.Ctx) error {
-	userDeviceID := c.Params("userDeviceID")
-
-	userDevice, err := models.UserDevices(
-		models.UserDeviceWhere.ID.EQ(userDeviceID),
-	).One(c.Context(), udc.DBS().Reader)
-	if err != nil {
-		return fiber.NewError(fiber.StatusNotFound, "No device with that ID found.")
-	}
-
-	var nid NFTImageData
-	if err := c.BodyParser(&nid); err != nil {
-		return fiber.NewError(fiber.StatusBadRequest, "Couldn't parse request body.")
-	}
-
-	// This may not be there, but if it is we should delete it.
-	imageData := strings.TrimPrefix(nid.ImageData, "data:image/png;base64,")
-
-	image, err := base64.StdEncoding.DecodeString(imageData)
-	if err != nil {
-		return fiber.NewError(fiber.StatusBadRequest, "Primary image not properly base64-encoded.")
-	}
-
-	if len(image) == 0 {
-		return fiber.NewError(fiber.StatusBadRequest, "Empty image field.")
-	}
-
-	cid, err := udc.ipfsSvc.UploadImage(c.Context(), nid.ImageData)
-	if err != nil {
-		return fiber.NewError(fiber.StatusBadRequest, "Failed to upload image to IPFS")
-	}
-
-	userDevice.IpfsImageCid = null.StringFrom(cid)
-	_, err = userDevice.Update(c.Context(), udc.DBS().Writer, boil.Whitelist(models.UserDeviceColumns.IpfsImageCid))
-	if err != nil {
-		return fiber.NewError(fiber.StatusBadRequest, "failed to store IPFS CID for vehicle")
-	}
-
-	// This may not be there, but if it is we should delete it.
-	imageDataTransp := strings.TrimPrefix(nid.ImageDataTransparent, "data:image/png;base64,")
-
-	// Should be okay if empty or not provided.
-	imageTransp, err := base64.StdEncoding.DecodeString(imageDataTransp)
-	if err != nil {
-		return fiber.NewError(fiber.StatusBadRequest, "Transparent image not properly base64-encoded.")
-	}
-
-	if len(imageTransp) != 0 {
-		if userDevice.TokenID.IsZero() || !userDevice.MintRequestID.Valid {
-			return fiber.NewError(fiber.StatusBadRequest, "Can't set transparent image for this vehicle.")
-		}
-
-		_, err = udc.s3.PutObject(c.Context(), &s3.PutObjectInput{
-			Bucket: &udc.Settings.NFTS3Bucket,
-			Key:    aws.String(userDevice.MintRequestID.String + "_transparent.png"),
-			Body:   bytes.NewReader(imageTransp),
-		})
-		if err != nil {
-			udc.log.Err(err).Msg("Failed to save transparent image to S3.")
-			return opaqueInternalError
-		}
-	}
-
-	return c.SendStatus(fiber.StatusNoContent)
 }
 
 // VehicleMintRequest contains the user's signature for the mint request as well as the
